...
            label: '?123',
            onTap: (context) => context.controller.setModeNamed('symbols'),
            flex: 30,
          ),
          OnscreenKeyboardKey.action(
            name: ActionKeyType.language,
            label: _german ? 'DE' : 'EN',
            flex: 26,
          ),
          ..._contextKeys,
          OnscreenKeyboardKey.action(
            name: ActionKeyType.enter,
            label: _enterLabel(fieldConfiguration?.inputAction),
...
